--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<camunda.version>7.14.0-ee</camunda.version>
 		<camundaRest.version>7.14.0</camundaRest.version>
 		<lombok.version>1.18.10</lombok.version>
+		<camunda-reactor.version>2.1.2</camunda-reactor.version>
 	</properties>
 
 	<dependencyManagement>
@@ -63,6 +64,16 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.extension.reactor</groupId>
+			<artifactId>camunda-bpm-reactor-core</artifactId>
+			<version>${camunda-reactor.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.extension.reactor</groupId>
+			<artifactId>camunda-bpm-reactor-spring-starter</artifactId>
+			<version>${camunda-reactor.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.camunda.spin</groupId>
